Iniciação dos comentários
